Traductores/A6 Análisis sintáctico de estructuras de control/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> estructura_control
Rule 1     estructura_control -> sentencia_if
Rule 2     estructura_control -> sentencia_while
Rule 3     estructura_control -> sentencia_for
Rule 4     sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
Rule 5     sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
Rule 6     sentencia_while -> WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
Rule 7     sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER
Rule 8     bloque -> sentencia
Rule 9     bloque -> bloque sentencia
Rule 10    asignacion -> IDENTIFICADOR MAS NUMERO
Rule 11    asignacion -> IDENTIFICADOR MENOS NUMERO
Rule 12    expresion -> IDENTIFICADOR
Rule 13    expresion -> NUMERO
Rule 14    sentencia -> asignacion PUNTOYCOMA

Terminals, with rules where they appear

ELSE                 : 5
FOR                  : 7
IDENTIFICADOR        : 10 11 12
IF                   : 4 5
LLAVEDER             : 4 5 5 6 7
LLAVEIZQ             : 4 5 5 6 7
MAS                  : 10
MENOS                : 11
NUMERO               : 10 11 13
PARDER               : 4 5 6 7
PARIZQ               : 4 5 6 7
PUNTOYCOMA           : 7 7 14
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

asignacion           : 7 14
bloque               : 4 5 5 6 7 9
estructura_control   : 0
expresion            : 4 5 6 7 7
sentencia            : 8 9
sentencia_for        : 3
sentencia_if         : 1
sentencia_while      : 2

Parsing method: LALR

state 0

    (0) S' -> . estructura_control
    (1) estructura_control -> . sentencia_if
    (2) estructura_control -> . sentencia_while
    (3) estructura_control -> . sentencia_for
    (4) sentencia_if -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (5) sentencia_if -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (6) sentencia_while -> . WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (7) sentencia_for -> . FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER

    IF              shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7

    estructura_control             shift and go to state 1
    sentencia_if                   shift and go to state 2
    sentencia_while                shift and go to state 3
    sentencia_for                  shift and go to state 4

state 1

    (0) S' -> estructura_control .



state 2

    (1) estructura_control -> sentencia_if .

    $end            reduce using rule 1 (estructura_control -> sentencia_if .)


state 3

    (2) estructura_control -> sentencia_while .

    $end            reduce using rule 2 (estructura_control -> sentencia_while .)


state 4

    (3) estructura_control -> sentencia_for .

    $end            reduce using rule 3 (estructura_control -> sentencia_for .)


state 5

    (4) sentencia_if -> IF . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (5) sentencia_if -> IF . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 8


state 6

    (6) sentencia_while -> WHILE . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 9


state 7

    (7) sentencia_for -> FOR . PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 10


state 8

    (4) sentencia_if -> IF PARIZQ . expresion PARDER LLAVEIZQ bloque LLAVEDER
    (5) sentencia_if -> IF PARIZQ . expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (12) expresion -> . IDENTIFICADOR
    (13) expresion -> . NUMERO

    IDENTIFICADOR   shift and go to state 12
    NUMERO          shift and go to state 13

    expresion                      shift and go to state 11

state 9

    (6) sentencia_while -> WHILE PARIZQ . expresion PARDER LLAVEIZQ bloque LLAVEDER
    (12) expresion -> . IDENTIFICADOR
    (13) expresion -> . NUMERO

    IDENTIFICADOR   shift and go to state 12
    NUMERO          shift and go to state 13

    expresion                      shift and go to state 14

state 10

    (7) sentencia_for -> FOR PARIZQ . asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    IDENTIFICADOR   shift and go to state 16

    asignacion                     shift and go to state 15

state 11

    (4) sentencia_if -> IF PARIZQ expresion . PARDER LLAVEIZQ bloque LLAVEDER
    (5) sentencia_if -> IF PARIZQ expresion . PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER

    PARDER          shift and go to state 17


state 12

    (12) expresion -> IDENTIFICADOR .

    PARDER          reduce using rule 12 (expresion -> IDENTIFICADOR .)
    PUNTOYCOMA      reduce using rule 12 (expresion -> IDENTIFICADOR .)


state 13

    (13) expresion -> NUMERO .

    PARDER          reduce using rule 13 (expresion -> NUMERO .)
    PUNTOYCOMA      reduce using rule 13 (expresion -> NUMERO .)


state 14

    (6) sentencia_while -> WHILE PARIZQ expresion . PARDER LLAVEIZQ bloque LLAVEDER

    PARDER          shift and go to state 18


state 15

    (7) sentencia_for -> FOR PARIZQ asignacion . PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER

    PUNTOYCOMA      shift and go to state 19


state 16

    (10) asignacion -> IDENTIFICADOR . MAS NUMERO
    (11) asignacion -> IDENTIFICADOR . MENOS NUMERO

    MAS             shift and go to state 20
    MENOS           shift and go to state 21


state 17

    (4) sentencia_if -> IF PARIZQ expresion PARDER . LLAVEIZQ bloque LLAVEDER
    (5) sentencia_if -> IF PARIZQ expresion PARDER . LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER

    LLAVEIZQ        shift and go to state 22


state 18

    (6) sentencia_while -> WHILE PARIZQ expresion PARDER . LLAVEIZQ bloque LLAVEDER

    LLAVEIZQ        shift and go to state 23


state 19

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA . expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER
    (12) expresion -> . IDENTIFICADOR
    (13) expresion -> . NUMERO

    IDENTIFICADOR   shift and go to state 12
    NUMERO          shift and go to state 13

    expresion                      shift and go to state 24

state 20

    (10) asignacion -> IDENTIFICADOR MAS . NUMERO

    NUMERO          shift and go to state 25


state 21

    (11) asignacion -> IDENTIFICADOR MENOS . NUMERO

    NUMERO          shift and go to state 26


state 22

    (4) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ . bloque LLAVEDER
    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ . bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (8) bloque -> . sentencia
    (9) bloque -> . bloque sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    IDENTIFICADOR   shift and go to state 16

    bloque                         shift and go to state 27
    sentencia                      shift and go to state 28
    asignacion                     shift and go to state 29

state 23

    (6) sentencia_while -> WHILE PARIZQ expresion PARDER LLAVEIZQ . bloque LLAVEDER
    (8) bloque -> . sentencia
    (9) bloque -> . bloque sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    IDENTIFICADOR   shift and go to state 16

    bloque                         shift and go to state 30
    sentencia                      shift and go to state 28
    asignacion                     shift and go to state 29

state 24

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion . PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER

    PUNTOYCOMA      shift and go to state 31


state 25

    (10) asignacion -> IDENTIFICADOR MAS NUMERO .

    PUNTOYCOMA      reduce using rule 10 (asignacion -> IDENTIFICADOR MAS NUMERO .)


state 26

    (11) asignacion -> IDENTIFICADOR MENOS NUMERO .

    PUNTOYCOMA      reduce using rule 11 (asignacion -> IDENTIFICADOR MENOS NUMERO .)


state 27

    (4) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque . LLAVEDER
    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque . LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (9) bloque -> bloque . sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    LLAVEDER        shift and go to state 32
    IDENTIFICADOR   shift and go to state 16

    sentencia                      shift and go to state 33
    asignacion                     shift and go to state 29

state 28

    (8) bloque -> sentencia .

    LLAVEDER        reduce using rule 8 (bloque -> sentencia .)
    IDENTIFICADOR   reduce using rule 8 (bloque -> sentencia .)


state 29

    (14) sentencia -> asignacion . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 34


state 30

    (6) sentencia_while -> WHILE PARIZQ expresion PARDER LLAVEIZQ bloque . LLAVEDER
    (9) bloque -> bloque . sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    LLAVEDER        shift and go to state 35
    IDENTIFICADOR   shift and go to state 16

    sentencia                      shift and go to state 33
    asignacion                     shift and go to state 29

state 31

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA . expresion PARDER LLAVEIZQ bloque LLAVEDER
    (12) expresion -> . IDENTIFICADOR
    (13) expresion -> . NUMERO

    IDENTIFICADOR   shift and go to state 12
    NUMERO          shift and go to state 13

    expresion                      shift and go to state 36

state 32

    (4) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER .
    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER . ELSE LLAVEIZQ bloque LLAVEDER

    $end            reduce using rule 4 (sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER .)
    ELSE            shift and go to state 37


state 33

    (9) bloque -> bloque sentencia .

    LLAVEDER        reduce using rule 9 (bloque -> bloque sentencia .)
    IDENTIFICADOR   reduce using rule 9 (bloque -> bloque sentencia .)


state 34

    (14) sentencia -> asignacion PUNTOYCOMA .

    LLAVEDER        reduce using rule 14 (sentencia -> asignacion PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 14 (sentencia -> asignacion PUNTOYCOMA .)


state 35

    (6) sentencia_while -> WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER .

    $end            reduce using rule 6 (sentencia_while -> WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER .)


state 36

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion . PARDER LLAVEIZQ bloque LLAVEDER

    PARDER          shift and go to state 38


state 37

    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE . LLAVEIZQ bloque LLAVEDER

    LLAVEIZQ        shift and go to state 39


state 38

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER . LLAVEIZQ bloque LLAVEDER

    LLAVEIZQ        shift and go to state 40


state 39

    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ . bloque LLAVEDER
    (8) bloque -> . sentencia
    (9) bloque -> . bloque sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    IDENTIFICADOR   shift and go to state 16

    bloque                         shift and go to state 41
    sentencia                      shift and go to state 28
    asignacion                     shift and go to state 29

state 40

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ . bloque LLAVEDER
    (8) bloque -> . sentencia
    (9) bloque -> . bloque sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    IDENTIFICADOR   shift and go to state 16

    asignacion                     shift and go to state 29
    bloque                         shift and go to state 42
    sentencia                      shift and go to state 28

state 41

    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque . LLAVEDER
    (9) bloque -> bloque . sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    LLAVEDER        shift and go to state 43
    IDENTIFICADOR   shift and go to state 16

    sentencia                      shift and go to state 33
    asignacion                     shift and go to state 29

state 42

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque . LLAVEDER
    (9) bloque -> bloque . sentencia
    (14) sentencia -> . asignacion PUNTOYCOMA
    (10) asignacion -> . IDENTIFICADOR MAS NUMERO
    (11) asignacion -> . IDENTIFICADOR MENOS NUMERO

    LLAVEDER        shift and go to state 44
    IDENTIFICADOR   shift and go to state 16

    asignacion                     shift and go to state 29
    sentencia                      shift and go to state 33

state 43

    (5) sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER .

    $end            reduce using rule 5 (sentencia_if -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER .)


state 44

    (7) sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER .

    $end            reduce using rule 7 (sentencia_for -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA expresion PARDER LLAVEIZQ bloque LLAVEDER .)

